--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A MEAN Stack API that allows users to manage contact lists",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "mean",
